<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layoutDescription="@xml/activity_main_xml_app_bar_scene"
    tools:context=".MainActivity">

    <View
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        android:layout_marginBottom="@dimen/margin_medium_minus"
        />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/profile_picture"
            android:layout_width="@dimen/profile_pic_dimens_big"
            android:layout_height="@dimen/profile_pic_dimens_big"
            android:background="@drawable/profile_pic_dark"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="@id/back_arrow"
            app:layout_constraintTop_toBottomOf="@id/back_arrow"
            app:roundPercent="1" />

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="@drawable/arrow_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_ic"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="@id/back_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_arrow"
            />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/name_tv"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toTopOf="@id/subscribers"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toTopOf="@id/profile_picture" />

    <TextView
        android:id="@+id/subscribers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/subscribers_tv"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_tiny"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="@id/name" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/info"
                >
                <TextView
                    android:id="@+id/info_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/light_blue"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/info_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/invite_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:text="@string/inf_content"
                    app:layout_constraintStart_toStartOf="@id/info_heading"
                    app:layout_constraintTop_toBottomOf="@id/info_heading"
                    android:layout_marginTop="@dimen/margin_small"
                    />


                <TextView
                    android:id="@+id/invite_link_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/gray"
                    android:text="@string/invite_link_tv"
                    app:layout_constraintStart_toStartOf="@id/invite_link"
                    app:layout_constraintTop_toBottomOf="@id/invite_link"
                    android:layout_marginTop="@dimen/margin_tiny"
                    android:textSize="@dimen/text_tiny"
                    />

                <ImageView
                    android:id="@+id/qr_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/qr_code_ic"
                    android:layout_marginEnd="@dimen/margin_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/invite_link"
                    app:layout_constraintBottom_toBottomOf="@id/invite_link_description"
                    />

                <View
                    android:id="@+id/line"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/invite_link_description"
                    app:layout_constraintTop_toBottomOf="@id/invite_link_description" />

                <TextView
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_tv"
                    android:textColor="@color/light_blue"
                    app:layout_constraintStart_toStartOf="@id/info_heading"
                    app:layout_constraintTop_toBottomOf="@+id/line"
                    android:layout_marginTop="@dimen/margin_medium"
                    />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_state"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_tiny"
                    android:layout_marginTop="@dimen/margin_tiny"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/notification"
                    app:layout_constraintTop_toBottomOf="@id/notification"
                    android:layout_marginBottom="@dimen/margin_medium"

                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/icon_height"
                    android:checked="true"
                    android:thumb="@drawable/switch_thumb_selector"
                    app:layout_constraintBottom_toBottomOf="@id/status"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/notification"
                    app:track="@drawable/switch_track_selector"
                    android:layout_marginEnd="@dimen/margin_small"
                    />

                <View
                    android:id="@+id/vertical_line"
                    android:layout_width="0.8dp"
                    android:layout_height="0dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/switch_notification"
                    app:layout_constraintTop_toTopOf="@id/switch_notification"
                    app:layout_constraintBottom_toBottomOf="@id/switch_notification"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/shared"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/info"
                >

                <TextView
                    android:id="@+id/media"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/media"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/text_small"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:layout_constraintEnd_toStartOf="@+id/files"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/files"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintBottom_toBottomOf="@id/media"
                    app:layout_constraintEnd_toStartOf="@+id/links"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/media"
                    app:layout_constraintTop_toTopOf="@id/media" />

                <TextView
                    android:id="@+id/links"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/links"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintBottom_toBottomOf="@+id/files"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/files"
                    app:layout_constraintTop_toTopOf="@id/files" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/line_blue"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_blue"
                    app:layout_constraintEnd_toEndOf="@id/media"
                    app:layout_constraintStart_toStartOf="@id/media"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:roundPercent="1"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>